<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/img_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/img_view_logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_border"
        android:backgroundTint="@color/edtBackground"
        android:backgroundTintMode="screen"
        android:hint="@string/email_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/edtColor"
        android:textColorHint="@color/edtHint"
        android:textCursorDrawable="@color/edtHint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_view_email_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#930C0C"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_view_email_error"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_border"
        android:backgroundTint="@color/edtBackground"
        android:backgroundTintMode="screen"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/edtColor"
        android:textColorHint="@color/edtHint"
        android:textCursorDrawable="@color/edtHint"
        android:textSize="20sp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edt_password"
        android:layout_alignBottom="@+id/edt_password"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/hide" />

    <TextView
        android:id="@+id/txt_view_password_error"
        android:layout_below="@+id/edt_password"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#930C0C"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/txt_view_password_error"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/login_btn_before_click">
        <TextView
            android:id="@+id/btn_login_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login_button"
            android:textColor="@color/login_txt_before_type"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/btn_forgot_password"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:textColor="@color/forgot_password"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/line_1"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_above="@+id/btn_signup"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="7dp"
        android:background="@color/line_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_signup"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="HOẶC"
        android:textColor="@color/white" />
    <View
        android:layout_marginBottom="7dp"
        android:id="@+id/line_2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="70dp"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_above="@+id/btn_signup"/>
    <RelativeLayout
        android:id="@+id/btn_signup"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/signup_btn"
        android:background="@drawable/signup_btn_rounded_corner"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/btn_signup_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/signup_btn_rounded_corner"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_signup"
            android:textColor="@color/btn_signup"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>
